adding a second replica of the frontend

--- a/apps/staging/oteldemo-values.yaml
+++ b/apps/staging/oteldemo-values.yaml
@@ -34,3 +34,8 @@ spec:
     #   frontendProxy:
     #     service:
     #       type: LoadBalancer
+
+    # uncommment to manage frontend replicaset count
+    components:
+      frontend:
+        replicas: 2
