demo-alloy-configmap.yaml - escape double quotes

--- a/infrastructure/collector-alloy/demo-alloy-configmap.yaml
+++ b/infrastructure/collector-alloy/demo-alloy-configmap.yaml
@@ -120,7 +120,7 @@ data:
       trace_statements {
         context    = "span"
         statements = [
-          `set(attributes["k8s.namespace.name"], "collector")`,
+          "set(attributes[\"k8s.namespace.name\"], \"collector\")",
         ]
       }
 
