disable live debugging

--- a/infrastructure/collector-alloy/demo-alloy-configmap.yaml
+++ b/infrastructure/collector-alloy/demo-alloy-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 data:
   config.alloy: |+
     livedebugging {
-      enabled = true
+      enabled = false
     }
 
     otelcol.receiver.otlp "default" {
