--- a/infrastructure/collector-alloy/grafana-alloy.yaml
+++ b/infrastructure/collector-alloy/grafana-alloy.yaml
@@ -34,6 +34,7 @@ spec:
     controller:
       type: 'deployment'
     alloy:
+      stabilityLevel: "experimental"
       extraPorts:
         - name: "otlp-grpc"
           port: 4317
