alloy stability back to normal

--- a/infrastructure/collector-alloy/grafana-alloy.yaml
+++ b/infrastructure/collector-alloy/grafana-alloy.yaml
@@ -34,7 +34,7 @@ spec:
     controller:
       type: 'deployment'
     alloy:
-      stabilityLevel: "experimental"
+      # stabilityLevel: "experimental"
       extraPorts:
         - name: "otlp-grpc"
           port: 4317
