--- a/infrastructure/collector-alloy/demo-alloy-configmap.yaml
+++ b/infrastructure/collector-alloy/demo-alloy-configmap.yaml
@@ -1,221 +1,87 @@
 apiVersion: v1
 data:
-  config.alloy: |+
-    livedebugging {
-      enabled = false
-    }
-
-    otelcol.receiver.otlp "default" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.receiver.otlp/
-
-      // configures the default grpc endpoint "0.0.0.0:4317"
-      grpc { }
-      // configures the default http/protobuf endpoint "0.0.0.0:4318"
-      http { }
-
-      output {
-        metrics = [otelcol.processor.k8sattributes.default.input]
-        logs    = [otelcol.processor.k8sattributes.default.input]
-        traces  = [otelcol.processor.k8sattributes.default.input]
-      }
-    }
-
-    // added this after discussion with Pete
-    // will add several things, including the k8s namespace name, which I needed for KG
-    otelcol.processor.k8sattributes "default" {
-      output {
-        metrics = [otelcol.processor.resourcedetection.default.input]
-        logs    = [otelcol.processor.resourcedetection.default.input]
-        traces  = [otelcol.processor.resourcedetection.default.input]
-      }
-    }
-
-
-
-    otelcol.processor.resourcedetection "default" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.resourcedetection/
-      detectors = ["env", "system"] // add "gcp", "ec2", "ecs", "elastic_beanstalk", "eks", "lambda", "azure", "aks", "consul", "heroku"  if you want to use cloud resource detection
-
-      system {
-        hostname_sources = ["os"]
-      }
-
-      output {
-        metrics = [otelcol.processor.transform.drop_unneeded_resource_attributes.input]
-        logs    = [otelcol.processor.transform.drop_unneeded_resource_attributes.input]
-        traces  = [otelcol.processor.transform.drop_unneeded_resource_attributes.input]
-      }
-    }
-
-    otelcol.processor.transform "drop_unneeded_resource_attributes" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.transform/
-      error_mode = "ignore"
-
-      trace_statements {
-        context    = "resource"
-        statements = [
-          "delete_key(attributes, \"k8s.pod.start_time\")",
-          "delete_key(attributes, \"os.description\")",
-          "delete_key(attributes, \"os.type\")",
-          "delete_key(attributes, \"process.command_args\")",
-          "delete_key(attributes, \"process.executable.path\")",
-          "delete_key(attributes, \"process.pid\")",
-          "delete_key(attributes, \"process.runtime.description\")",
-          "delete_key(attributes, \"process.runtime.name\")",
-          "delete_key(attributes, \"process.runtime.version\")",
-        ]
-      }
-
-      metric_statements {
-        context    = "resource"
-        statements = [
-          "delete_key(attributes, \"k8s.pod.start_time\")",
-          "delete_key(attributes, \"os.description\")",
-          "delete_key(attributes, \"os.type\")",
-          "delete_key(attributes, \"process.command_args\")",
-          "delete_key(attributes, \"process.executable.path\")",
-          "delete_key(attributes, \"process.pid\")",
-          "delete_key(attributes, \"process.runtime.description\")",
-          "delete_key(attributes, \"process.runtime.name\")",
-          "delete_key(attributes, \"process.runtime.version\")",
-        ]
-      }
-
-      log_statements {
-        context    = "resource"
-        statements = [
-          "delete_key(attributes, \"k8s.pod.start_time\")",
-          "delete_key(attributes, \"os.description\")",
-          "delete_key(attributes, \"os.type\")",
-          "delete_key(attributes, \"process.command_args\")",
-          "delete_key(attributes, \"process.executable.path\")",
-          "delete_key(attributes, \"process.pid\")",
-          "delete_key(attributes, \"process.runtime.description\")",
-          "delete_key(attributes, \"process.runtime.name\")",
-          "delete_key(attributes, \"process.runtime.version\")",
-        ]
-      }
-
-      output {
-        metrics = [otelcol.processor.transform.reduce_otel_demo_cardinality.input]
-        logs    = [otelcol.processor.transform.reduce_otel_demo_cardinality.input]
-        traces  = [otelcol.processor.transform.reduce_otel_demo_cardinality.input]
-      }
-
-    }
-
-    // (This component is not part of the starter AppOlly production config in Grafana's docs.)
-    // This adds a custom set of OTTL transformations that normalizes span names,
-    // to remove high-cardinality IDs (like cart ID, recommendation ID)
-    otelcol.processor.transform "reduce_otel_demo_cardinality" {
-
-      error_mode = "ignore"
-
-      trace_statements {
-        context    = "span"
-        statements = [
-          "replace_match(name, \"GET /api/cart*\", \"GET /api/cart\")",
-          "replace_match(name, \"GET /api/recommendations*\", \"GET /api/recommendations\")",
-          "replace_match(name, \"GET /api/products*\", \"GET /api/products\")",
-        ]
-      }
-
-      // output {
-      //   metrics = [otelcol.processor.transform.add_resource_attributes_as_metric_attributes.input]
-      //   logs    = [otelcol.processor.batch.default.input]
-      //   traces  = [
-      //     otelcol.processor.batch.default.input,
-      //     otelcol.connector.host_info.default.input,
-      //   ]
-      // }
-
-      output {
-        metrics = [otelcol.processor.transform.add_labels_for_KG.input]
-        logs    = [otelcol.processor.transform.add_labels_for_KG.input]
-        traces  = [otelcol.processor.transform.add_labels_for_KG.input]
-      }
-    }
-
-
-    // this is based on conversations about using KG with App O11y
-    otelcol.processor.transform "add_labels_for_KG" {
-      error_mode = "ignore"
-      trace_statements {
-        context    = "resource"
-        statements = [
-          "set(attributes[\"k8s.namespace.name\"], \"collector\")",
-        ]
-      }
-      output {
-        metrics = [otelcol.processor.transform.add_resource_attributes_as_metric_attributes.input]
-        logs    = [otelcol.processor.batch.default.input]
-        traces  = [
-          otelcol.processor.batch.default.input,
-          otelcol.connector.host_info.default.input,
-        ]
-      }
-    }
-
-
-    otelcol.connector.host_info "default" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.connector.host_info/
-      host_identifiers = ["host.name"]
-
-      output {
-        metrics = [otelcol.processor.batch.default.input]
-      }
-    }
-
-    otelcol.processor.transform "add_resource_attributes_as_metric_attributes" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.transform/
-      error_mode = "ignore"
-
-      metric_statements {
-        context    = "datapoint"
-        statements = [
-          "set(attributes[\"deployment.environment\"], resource.attributes[\"deployment.environment\"])",
-          "set(attributes[\"service.version\"], resource.attributes[\"service.version\"])",
-        ]
-      }
-
-      output {
-        metrics = [otelcol.processor.batch.default.input]
-      }
-    }
-
-    otelcol.processor.batch "default" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.batch/
-      output {
-        metrics = [otelcol.exporter.otlphttp.grafana_cloud.input]
-        logs    = [otelcol.exporter.otlphttp.grafana_cloud.input]
-        traces  = [otelcol.exporter.otlphttp.grafana_cloud.input]
-      }
-    }
-
-    // (The next 2 components are not part of the starter AppOlly production config in Grafana's docs.)
-    remote.kubernetes.configmap "grafanacloud_otlphttp_configmap" {
-      namespace = "collector"
-      name = "grafanacloud-otlphttp-configmap"
-    }
-    remote.kubernetes.secret "grafanacloud_otlphttp_secret" {
-      namespace = "collector"
-      name = "grafanacloud-otlphttp-secret"
-    }
-
-    // (The next 2 components are modified from the starter AppOlly production config in Grafana's docs.)
-    otelcol.exporter.otlphttp "grafana_cloud" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.exporter.otlphttp/
-      client {
-        endpoint = remote.kubernetes.configmap.grafanacloud_otlphttp_configmap.data["url"]
-        auth     = otelcol.auth.basic.grafana_cloud.handler
-      }
-    }
-    otelcol.auth.basic "grafana_cloud" {
-      // https://grafana.com/docs/alloy/latest/reference/components/otelcol.auth.basic/
-      username = convert.nonsensitive(remote.kubernetes.configmap.grafanacloud_otlphttp_configmap.data["username"])
-      password = remote.kubernetes.secret.grafanacloud_otlphttp_secret.data["password"]
-    }
-
+  config.alloy: "otelcol.receiver.otlp \"default\" {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.receiver.otlp/\n
+    \ // configures the default grpc endpoint \"0.0.0.0:4317\"\n  grpc { }\n  // configures
+    the default http/protobuf endpoint \"0.0.0.0:4318\"\n  http { }\n  output {\n\tmetrics
+    = [otelcol.processor.k8sattributes.default.input]\n\tlogs    = [otelcol.processor.k8sattributes.default.input]\n\ttraces
+    \ = [otelcol.processor.k8sattributes.default.input]\n  }\n}\n\n// added this after
+    discussion with Pete\n// supposed to add several labels, including the k8s namespace
+    name, which I needed for KG\notelcol.processor.k8sattributes \"default\" {\n  output
+    {\n\tmetrics = [otelcol.processor.resourcedetection.default.input]\n\tlogs    =
+    [otelcol.processor.resourcedetection.default.input]\n\ttraces  = [otelcol.processor.resourcedetection.default.input]\n
+    \ }\n}\n\n\notelcol.processor.resourcedetection \"default\" {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.resourcedetection/\n
+    \ detectors = [\"env\", \"system\"] // add \"gcp\", \"ec2\", \"ecs\", \"elastic_beanstalk\",
+    \"eks\", \"lambda\", \"azure\", \"aks\", \"consul\", \"heroku\"  if you want to
+    use cloud resource detection\n\n  system {\n    hostname_sources = [\"os\"]\n
+    \ }\n\n  output {\n    metrics = [otelcol.processor.transform.drop_unneeded_resource_attributes.input]\n
+    \   logs    = [otelcol.processor.transform.drop_unneeded_resource_attributes.input]\n
+    \   traces  = [otelcol.processor.transform.drop_unneeded_resource_attributes.input]\n
+    \ }\n}\n\notelcol.processor.transform \"drop_unneeded_resource_attributes\" {\n
+    \ // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.transform/\n
+    \ error_mode = \"ignore\"\n\n  trace_statements {\n    context    = \"resource\"\n
+    \   statements = [\n      \"delete_key(attributes, \\\"k8s.pod.start_time\\\")\",\n
+    \     \"delete_key(attributes, \\\"os.description\\\")\",\n      \"delete_key(attributes,
+    \\\"os.type\\\")\",\n      \"delete_key(attributes, \\\"process.command_args\\\")\",\n
+    \     \"delete_key(attributes, \\\"process.executable.path\\\")\",\n      \"delete_key(attributes,
+    \\\"process.pid\\\")\",\n      \"delete_key(attributes, \\\"process.runtime.description\\\")\",\n
+    \     \"delete_key(attributes, \\\"process.runtime.name\\\")\",\n      \"delete_key(attributes,
+    \\\"process.runtime.version\\\")\",\n    ]\n  }\n\n  metric_statements {\n    context
+    \   = \"resource\"\n    statements = [\n      \"delete_key(attributes, \\\"k8s.pod.start_time\\\")\",\n
+    \     \"delete_key(attributes, \\\"os.description\\\")\",\n      \"delete_key(attributes,
+    \\\"os.type\\\")\",\n      \"delete_key(attributes, \\\"process.command_args\\\")\",\n
+    \     \"delete_key(attributes, \\\"process.executable.path\\\")\",\n      \"delete_key(attributes,
+    \\\"process.pid\\\")\",\n      \"delete_key(attributes, \\\"process.runtime.description\\\")\",\n
+    \     \"delete_key(attributes, \\\"process.runtime.name\\\")\",\n      \"delete_key(attributes,
+    \\\"process.runtime.version\\\")\",\n    ]\n  }\n\n  log_statements {\n    context
+    \   = \"resource\"\n    statements = [\n      \"delete_key(attributes, \\\"k8s.pod.start_time\\\")\",\n
+    \     \"delete_key(attributes, \\\"os.description\\\")\",\n      \"delete_key(attributes,
+    \\\"os.type\\\")\",\n      \"delete_key(attributes, \\\"process.command_args\\\")\",\n
+    \     \"delete_key(attributes, \\\"process.executable.path\\\")\",\n      \"delete_key(attributes,
+    \\\"process.pid\\\")\",\n      \"delete_key(attributes, \\\"process.runtime.description\\\")\",\n
+    \     \"delete_key(attributes, \\\"process.runtime.name\\\")\",\n      \"delete_key(attributes,
+    \\\"process.runtime.version\\\")\",\n    ]\n  }\n\n  output {\n    metrics = [otelcol.processor.transform.reduce_otel_demo_cardinality.input]\n
+    \   logs    = [otelcol.processor.transform.reduce_otel_demo_cardinality.input]\n
+    \   traces  = [otelcol.processor.transform.reduce_otel_demo_cardinality.input]\n
+    \ }\n\n}\n\n// (This component is not part of the starter AppOlly production config
+    in Grafana's docs.)\n// This adds a custom set of OTTL transformations that normalizes
+    span names,\n// to remove high-cardinality IDs (like cart ID, recommendation ID)\notelcol.processor.transform
+    \"reduce_otel_demo_cardinality\" {\n\n  error_mode = \"ignore\"\n\n  trace_statements
+    {\n    context    = \"span\"\n    statements = [\n      \"replace_match(name,
+    \\\"GET /api/cart*\\\", \\\"GET /api/cart\\\")\",\n      \"replace_match(name,
+    \\\"GET /api/recommendations*\\\", \\\"GET /api/recommendations\\\")\",\n      \"replace_match(name,
+    \\\"GET /api/products*\\\", \\\"GET /api/products\\\")\",\n    ]\n  }\n\n  output
+    {\n    metrics = [otelcol.processor.transform.add_labels_for_KG.input]\n    logs
+    \   = [otelcol.processor.transform.add_labels_for_KG.input]\n    traces  = [otelcol.processor.transform.add_labels_for_KG.input]\n
+    \ }\n}\n\n\n// this is based on conversations about using KG with App O11y\notelcol.processor.transform
+    \"add_labels_for_KG\" {\n  error_mode = \"ignore\"\n  trace_statements {\n    context
+    \   = \"resource\"\n    statements = [\n      \"set(attributes[\\\"k8s.namespace.name\\\"],
+    \\\"collector\\\")\",\n      \"set(attributes[\\\"k8s.cluster.name\\\"], \\\"zzz-stadler-tf-take-home\\\")\",\n\t
+    \ \"set(attributes[\\\"cloud.provider\\\"], \\\"gcp\\\")\",\n    ]\n  }\n  output
+    {\n    metrics = [otelcol.processor.transform.add_resource_attributes_as_metric_attributes.input]\n
+    \   logs    = [otelcol.processor.batch.default.input]\n    traces  = [\n      otelcol.processor.batch.default.input,\n
+    \     otelcol.connector.host_info.default.input,\n    ]\n  }\n}\n\n\n\n\notelcol.connector.host_info
+    \"default\" {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.connector.host_info/\n
+    \ host_identifiers = [\"host.name\"]\n\n  output {\n    metrics = [otelcol.processor.batch.default.input]\n
+    \ }\n}\n\notelcol.processor.transform \"add_resource_attributes_as_metric_attributes\"
+    {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.transform/\n
+    \ error_mode = \"ignore\"\n\n  metric_statements {\n    context    = \"datapoint\"\n
+    \   statements = [\n      \"set(attributes[\\\"deployment.environment\\\"], resource.attributes[\\\"deployment.environment\\\"])\",\n
+    \     \"set(attributes[\\\"service.version\\\"], resource.attributes[\\\"service.version\\\"])\",\n
+    \   ]\n  }\n\n  output {\n    metrics = [otelcol.processor.batch.default.input]\n
+    \ }\n}\n\notelcol.processor.batch \"default\" {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.processor.batch/\n
+    \ output {\n    metrics = [otelcol.exporter.otlphttp.grafana_cloud.input]\n    logs
+    \   = [otelcol.exporter.otlphttp.grafana_cloud.input]\n    traces  = [otelcol.exporter.otlphttp.grafana_cloud.input]\n
+    \ }\n}\n\n// (The next 2 components are not part of the starter AppOlly production
+    config in Grafana's docs.)\nremote.kubernetes.configmap \"grafanacloud_otlphttp_configmap\"
+    {\n  namespace = \"collector\"\n  name = \"grafanacloud-otlphttp-configmap\"\n}\nremote.kubernetes.secret
+    \"grafanacloud_otlphttp_secret\" {\n  namespace = \"collector\"\n  name = \"grafanacloud-otlphttp-secret\"\n}\n\n//
+    (The next 2 components are modified from the starter AppOlly production config
+    in Grafana's docs.)\notelcol.exporter.otlphttp \"grafana_cloud\" {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.exporter.otlphttp/\n
+    \ client {\n    endpoint = remote.kubernetes.configmap.grafanacloud_otlphttp_configmap.data[\"url\"]\n
+    \   auth     = otelcol.auth.basic.grafana_cloud.handler\n  }\n}\notelcol.auth.basic
+    \"grafana_cloud\" {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.auth.basic/\n
+    \ username = convert.nonsensitive(remote.kubernetes.configmap.grafanacloud_otlphttp_configmap.data[\"username\"])\n
+    \ password = remote.kubernetes.secret.grafanacloud_otlphttp_secret.data[\"password\"]\n}\n\n"
 kind: ConfigMap
 metadata:
   creationTimestamp: null
