trying a fake pod name to make KG light up

--- a/infrastructure/collector-alloy/demo-alloy-configmap.yaml
+++ b/infrastructure/collector-alloy/demo-alloy-configmap.yaml
@@ -58,7 +58,8 @@ data:
     \\\"collector\\\")\",\n      \"set(attributes[\\\"k8s.cluster.name\\\"], \\\"zzz-stadler-tf-take-home\\\")\",\n
     \     \"set(attributes[\\\"cloud.provider\\\"], \\\"gcp\\\")\",\n      \"set(attributes[\\\"cloud.account.id\\\"],
     \\\"solutions-engineering-248511\\\")\",\n      \"set(attributes[\\\"cloud.availability.zone\\\"],
-    \\\"us-central1-a\\\")\",\n    ]\n  }\n  output {\n    metrics = [otelcol.processor.transform.add_resource_attributes_as_metric_attributes.input]\n
+    \\\"us-central1-a\\\")\",\n      \"set(attributes[\\\"k8s.pod.name\\\"], \\\"12345\\\")\",\n
+    \   ]\n  }\n  output {\n    metrics = [otelcol.processor.transform.add_resource_attributes_as_metric_attributes.input]\n
     \   logs    = [otelcol.processor.batch.default.input]\n    traces  = [\n      otelcol.processor.batch.default.input,\n
     \     otelcol.connector.host_info.default.input,\n    ]\n  }\n}\n\n\n\n\notelcol.connector.host_info
     \"default\" {\n  // https://grafana.com/docs/alloy/latest/reference/components/otelcol.connector.host_info/\n
