--- a/apps/staging/oteldemo-values.yaml
+++ b/apps/staging/oteldemo-values.yaml
@@ -11,7 +11,8 @@ spec:
     default:
       envOverrides:
         - name: OTEL_COLLECTOR_NAME
-          value: alloy.collector
+          # value: alloy.collector
+          value: k8s-monitoring-alloy-receiver.collector
 
     # turn off the included olly stack
     opentelemetry-collector:
@@ -38,4 +39,4 @@ spec:
     # uncommment to manage frontend replicaset count
     components:
       frontend:
-        replicas: 6
+        replicas: 1
