--- a/apps/staging/oteldemo-values.yaml
+++ b/apps/staging/oteldemo-values.yaml
@@ -12,7 +12,7 @@ spec:
       envOverrides:
         - name: OTEL_COLLECTOR_NAME
           # value: alloy.collector
-          value: k8s-monitoring-alloy-receiver.collector
+          value: grafana-k8s-monitoring-alloy-receiver.grafana-k8s
 
     # turn off the included olly stack
     opentelemetry-collector:
