--- a/apps/staging/oteldemo-values.yaml
+++ b/apps/staging/oteldemo-values.yaml
@@ -11,8 +11,8 @@ spec:
     default:
       envOverrides:
         - name: OTEL_COLLECTOR_NAME
-          # value: alloy.collector
-          value: grafana-k8s-monitoring-alloy-receiver.grafana-k8s
+          value: alloy.collector
+          # value: grafana-k8s-monitoring-alloy-receiver.grafana-k8s
 
     # turn off the included olly stack
     opentelemetry-collector:
